--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   quiver_hashcode: ^2.0.0
-  collection: ^1.15.0
+  collection: ^1.15.0-nullsafety.5
   tuple: ^2.0.0-nullsafety.0
   url_launcher: ^6.0.0
   flutter_colorpicker: ^0.4.0-nullsafety.0
